Packages_2024/llvm-project_20.1.2/llvm/Core.inc


function LLVMContextCreate: TLLVMContextRef; cdecl; external libllvm;
function LLVMGetGlobalContext: TLLVMContextRef; cdecl; external libllvm;
procedure LLVMContextSetDiagnosticHandler(C: TLLVMContextRef; Handler: TLLVMDiagnosticHandler; DiagnosticContext: pointer); cdecl; external libllvm;
function LLVMContextGetDiagnosticHandler(C: TLLVMContextRef): TLLVMDiagnosticHandler; cdecl; external libllvm;
function LLVMContextGetDiagnosticContext(C: TLLVMContextRef): pointer; cdecl; external libllvm;
procedure LLVMContextSetYieldCallback(C: TLLVMContextRef; Callback: TLLVMYieldCallback; OpaqueHandle: pointer); cdecl; external libllvm;
function LLVMContextShouldDiscardValueNames(C: TLLVMContextRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMContextSetDiscardValueNames(C: TLLVMContextRef; Discard: TLLVMBool); cdecl; external libllvm;
procedure LLVMContextDispose(C: TLLVMContextRef); cdecl; external libllvm;
function LLVMGetDiagInfoDescription(DI: TLLVMDiagnosticInfoRef): pchar; cdecl; external libllvm;
function LLVMGetDiagInfoSeverity(DI: TLLVMDiagnosticInfoRef): TLLVMDiagnosticSeverity; cdecl; external libllvm;
function LLVMGetMDKindIDInContext(C: TLLVMContextRef; Name: pchar; SLen: dword): dword; cdecl; external libllvm;
function LLVMGetMDKindID(Name: pchar; SLen: dword): dword; cdecl; external libllvm;
function LLVMGetSyncScopeID(C: TLLVMContextRef; Name: pchar; SLen: Tsize_t): dword; cdecl; external libllvm;
function LLVMGetEnumAttributeKindForName(Name: pchar; SLen: Tsize_t): dword; cdecl; external libllvm;
function LLVMGetLastEnumAttributeKind: dword; cdecl; external libllvm;
function LLVMCreateEnumAttribute(C: TLLVMContextRef; KindID: dword; Val: Tuint64_t): TLLVMAttributeRef; cdecl; external libllvm;
function LLVMGetEnumAttributeKind(A: TLLVMAttributeRef): dword; cdecl; external libllvm;
function LLVMGetEnumAttributeValue(A: TLLVMAttributeRef): Tuint64_t; cdecl; external libllvm;
function LLVMCreateTypeAttribute(C: TLLVMContextRef; KindID: dword; type_ref: TLLVMTypeRef): TLLVMAttributeRef; cdecl; external libllvm;
function LLVMGetTypeAttributeValue(A: TLLVMAttributeRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMCreateConstantRangeAttribute(C: TLLVMContextRef; KindID: dword; NumBits: dword; LowerWords: Puint64_t; UpperWords: Puint64_t): TLLVMAttributeRef; cdecl; external libllvm;
function LLVMCreateStringAttribute(C: TLLVMContextRef; K: pchar; KLength: dword; V: pchar; VLength: dword): TLLVMAttributeRef; cdecl; external libllvm;
function LLVMGetStringAttributeKind(A: TLLVMAttributeRef; Length: Pdword): pchar; cdecl; external libllvm;
function LLVMGetStringAttributeValue(A: TLLVMAttributeRef; Length: Pdword): pchar; cdecl; external libllvm;
function LLVMIsEnumAttribute(A: TLLVMAttributeRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsStringAttribute(A: TLLVMAttributeRef): TLLVMBool; cdecl; external libllvm;
function LLVMIsTypeAttribute(A: TLLVMAttributeRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetTypeByName2(C: TLLVMContextRef; Name: pchar): TLLVMTypeRef; cdecl; external libllvm;
function LLVMModuleCreateWithName(ModuleID: pchar): TLLVMModuleRef; cdecl; external libllvm;
function LLVMModuleCreateWithNameInContext(ModuleID: pchar; C: TLLVMContextRef): TLLVMModuleRef; cdecl; external libllvm;
function LLVMCloneModule(M: TLLVMModuleRef): TLLVMModuleRef; cdecl; external libllvm;
procedure LLVMDisposeModule(M: TLLVMModuleRef); cdecl; external libllvm;
function LLVMIsNewDbgInfoFormat(M: TLLVMModuleRef): TLLVMBool; cdecl; external libllvm;
procedure LLVMSetIsNewDbgInfoFormat(M: TLLVMModuleRef; UseNewFormat: TLLVMBool); cdecl; external libllvm;
function LLVMGetModuleIdentifier(M: TLLVMModuleRef; Len: Psize_t): pchar; cdecl; external libllvm;
procedure LLVMSetModuleIdentifier(M: TLLVMModuleRef; Ident: pchar; Len: Tsize_t); cdecl; external libllvm;
function LLVMGetSourceFileName(M: TLLVMModuleRef; Len: Psize_t): pchar; cdecl; external libllvm;
procedure LLVMSetSourceFileName(M: TLLVMModuleRef; Name: pchar; Len: Tsize_t); cdecl; external libllvm;
function LLVMGetDataLayoutStr(M: TLLVMModuleRef): pchar; cdecl; external libllvm;
function LLVMGetDataLayout(M: TLLVMModuleRef): pchar; cdecl; external libllvm;
procedure LLVMSetDataLayout(M: TLLVMModuleRef; DataLayoutStr: pchar); cdecl; external libllvm;
function LLVMGetTarget(M: TLLVMModuleRef): pchar; cdecl; external libllvm;
procedure LLVMSetTarget(M: TLLVMModuleRef; Triple: pchar); cdecl; external libllvm;
function LLVMCopyModuleFlagsMetadata(M: TLLVMModuleRef; Len: Psize_t): PLLVMModuleFlagEntry; cdecl; external libllvm;
procedure LLVMDisposeModuleFlagsMetadata(Entries: PLLVMModuleFlagEntry); cdecl; external libllvm;
function LLVMModuleFlagEntriesGetFlagBehavior(Entries: PLLVMModuleFlagEntry; Index: dword): TLLVMModuleFlagBehavior; cdecl; external libllvm;
function LLVMModuleFlagEntriesGetKey(Entries: PLLVMModuleFlagEntry; Index: dword; Len: Psize_t): pchar; cdecl; external libllvm;
function LLVMModuleFlagEntriesGetMetadata(Entries: PLLVMModuleFlagEntry; Index: dword): TLLVMMetadataRef; cdecl; external libllvm;
function LLVMGetModuleFlag(M: TLLVMModuleRef; Key: pchar; KeyLen: Tsize_t): TLLVMMetadataRef; cdecl; external libllvm;
procedure LLVMAddModuleFlag(M: TLLVMModuleRef; Behavior: TLLVMModuleFlagBehavior; Key: pchar; KeyLen: Tsize_t; Val: TLLVMMetadataRef); cdecl; external libllvm;
procedure LLVMDumpModule(M: TLLVMModuleRef); cdecl; external libllvm;
function LLVMPrintModuleToFile(M: TLLVMModuleRef; Filename: pchar; ErrorMessage: PPchar): TLLVMBool; cdecl; external libllvm;
function LLVMPrintModuleToString(M: TLLVMModuleRef): pchar; cdecl; external libllvm;
function LLVMGetModuleInlineAsm(M: TLLVMModuleRef; Len: Psize_t): pchar; cdecl; external libllvm;
procedure LLVMSetModuleInlineAsm2(M: TLLVMModuleRef; Asm_: pchar; Len: Tsize_t); cdecl; external libllvm;
procedure LLVMAppendModuleInlineAsm(M: TLLVMModuleRef; Asm_: pchar; Len: Tsize_t); cdecl; external libllvm;
function LLVMGetInlineAsm(Ty: TLLVMTypeRef; AsmString: pchar; AsmStringSize: Tsize_t; Constraints: pchar; ConstraintsSize: Tsize_t;
  HasSideEffects: TLLVMBool; IsAlignStack: TLLVMBool; Dialect: TLLVMInlineAsmDialect; CanThrow: TLLVMBool): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetInlineAsmAsmString(InlineAsmVal: TLLVMValueRef; Len: Psize_t): pchar; cdecl; external libllvm;
function LLVMGetInlineAsmConstraintString(InlineAsmVal: TLLVMValueRef; Len: Psize_t): pchar; cdecl; external libllvm;
function LLVMGetInlineAsmDialect(InlineAsmVal: TLLVMValueRef): TLLVMInlineAsmDialect; cdecl; external libllvm;
function LLVMGetInlineAsmFunctionType(InlineAsmVal: TLLVMValueRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetInlineAsmHasSideEffects(InlineAsmVal: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetInlineAsmNeedsAlignedStack(InlineAsmVal: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetInlineAsmCanUnwind(InlineAsmVal: TLLVMValueRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetModuleContext(M: TLLVMModuleRef): TLLVMContextRef; cdecl; external libllvm;
function LLVMGetTypeByName(M: TLLVMModuleRef; Name: pchar): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetFirstNamedMetadata(M: TLLVMModuleRef): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetLastNamedMetadata(M: TLLVMModuleRef): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetNextNamedMetadata(NamedMDNode: TLLVMNamedMDNodeRef): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetPreviousNamedMetadata(NamedMDNode: TLLVMNamedMDNodeRef): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetNamedMetadata(M: TLLVMModuleRef; Name: pchar; NameLen: Tsize_t): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetOrInsertNamedMetadata(M: TLLVMModuleRef; Name: pchar; NameLen: Tsize_t): TLLVMNamedMDNodeRef; cdecl; external libllvm;
function LLVMGetNamedMetadataName(NamedMD: TLLVMNamedMDNodeRef; NameLen: Psize_t): pchar; cdecl; external libllvm;
function LLVMGetNamedMetadataNumOperands(M: TLLVMModuleRef; Name: pchar): dword; cdecl; external libllvm;
procedure LLVMGetNamedMetadataOperands(M: TLLVMModuleRef; Name: pchar; Dest: PLLVMValueRef); cdecl; external libllvm;
procedure LLVMAddNamedMetadataOperand(M: TLLVMModuleRef; Name: pchar; Val: TLLVMValueRef); cdecl; external libllvm;
function LLVMGetDebugLocDirectory(Val: TLLVMValueRef; Length: Pdword): pchar; cdecl; external libllvm;
function LLVMGetDebugLocFilename(Val: TLLVMValueRef; Length: Pdword): pchar; cdecl; external libllvm;
function LLVMGetDebugLocLine(Val: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMGetDebugLocColumn(Val: TLLVMValueRef): dword; cdecl; external libllvm;
function LLVMAddFunction(M: TLLVMModuleRef; Name: pchar; FunctionTy: TLLVMTypeRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetNamedFunction(M: TLLVMModuleRef; Name: pchar): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetNamedFunctionWithLength(M: TLLVMModuleRef; Name: pchar; Length: Tsize_t): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetFirstFunction(M: TLLVMModuleRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetLastFunction(M: TLLVMModuleRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetNextFunction(Fn: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
function LLVMGetPreviousFunction(Fn: TLLVMValueRef): TLLVMValueRef; cdecl; external libllvm;
procedure LLVMSetModuleInlineAsm(M: TLLVMModuleRef; Asm_: pchar); cdecl; external libllvm;
function LLVMGetTypeKind(Ty: TLLVMTypeRef): TLLVMTypeKind; cdecl; external libllvm;
function LLVMTypeIsSized(Ty: TLLVMTypeRef): TLLVMBool; cdecl; external libllvm;
function LLVMGetTypeContext(Ty: TLLVMTypeRef): TLLVMContextRef; cdecl; external libllvm;
procedure LLVMDumpType(Val: TLLVMTypeRef); cdecl; external libllvm;
function LLVMPrintTypeToString(Val: TLLVMTypeRef): pchar; cdecl; external libllvm;

function LLVMInt1TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt8TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt16TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt32TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt64TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt128TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMIntTypeInContext(C: TLLVMContextRef; NumBits: dword): TLLVMTypeRef; cdecl; external libllvm;

function LLVMInt1Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt8Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt16Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt32Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt64Type: TLLVMTypeRef; cdecl; external libllvm;
function LLVMInt128Type: TLLVMTypeRef; cdecl; external libllvm;

function LLVMIntType(NumBits: dword): TLLVMTypeRef; cdecl; external libllvm;
function LLVMGetIntTypeWidth(IntegerTy: TLLVMTypeRef): dword; cdecl; external libllvm;
function LLVMHalfTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMBFloatTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMFloatTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMDoubleTypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMX86FP80TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMFP128TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
function LLVMPPCFP128TypeInContext(C: TLLVMContextRef): TLLVMTypeRef; cdecl; external libllvm;
